plugins {
    id 'java'
    id 'org.graalvm.buildtools.native' version '0.10.4'
    id 'application' // Add this line
}

group = 'org.alex_hashtag'
version = '1.0-SNAPSHOT'

repositories {
    mavenCentral()
}

dependencies {
    testImplementation platform('org.junit:junit-bom:5.10.0')
    testImplementation 'org.junit.jupiter:junit-jupiter'
    implementation 'info.picocli:picocli:4.7.6' // CLI support
    annotationProcessor 'info.picocli:picocli-codegen:4.7.6'
    implementation 'com.moandjiezana.toml:toml4j:0.7.2'
    implementation 'org.projectlombok:lombok:1.18.36' // Lombok
    testImplementation 'org.junit.jupiter:junit-jupiter:5.10.0' // Testing framework
    annotationProcessor 'org.projectlombok:lombok:1.18.36'
    implementation 'org.jetbrains:annotations:24.0.1' // Optional annotations
    implementation 'org.eclipse.angus:angus-mail:2.0.3' // Latest version of Angus Mail
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21) // Replace 17 with your desired Java version
    }
}

// Add this block to specify the main class
application {
    mainClass = 'org.alex_hashtag.Main'
}

graalvmNative {
    binaries {
        main {                        // First binary
            mainClass = 'org.alex_hashtag.Main'
            imageName = 'rainforest'
            buildArgs.add('--no-fallback')
        }
    }
}